--- a/src/app.css
+++ b/src/app.css
@@ -1,21 +1,29 @@
 :root {
-    --primary-color: #b9c6d2;
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  --primary-color: #b9c6d2;
+  --secondary-color: #d0dde9;
+  --tertiary-color: #edf0f8;
 }
 
 body {
-    background-color: var(--primary-color) ;
-    min-height: 100vh;
-    margin: 0;
+  background-color: var(--primary-color);
+  background: linear-gradient(
+    180deg,
+    var(--primary-color),
+    var(--secondary-color),
+    var(--tertiary-color)
+  );
+  margin: 0;
+  min-height: 100vh;
 }
 
 h1 {
-    text-align: center;
-    font-size: 2rem;
+  text-align: center;
+  font-size: 2rem;
 }
 
 @media (min-width: 720px) {
-    h1{
-        font-size: 2.4rem;
-    }
+  h1 {
+    font-size: 2.4rem;
+  }
 }
